Update modul 1 kb 1

--- a/modul-01/kb-01.md
+++ b/modul-01/kb-01.md
@@ -64,7 +64,7 @@ Usia Anda: 47
 
 [Gambar 1.4.b](../media/Gambar-1.4.b.png)
 
-Contoh Program Sederhana Pytho
+Contoh Program Sederhana Python
 
 Perbedaan antara statemen `raw_input` dengan `input` adalah bahwa dengan `raw_input` pengguna diperbolehkan memasukkan sembarang karakter, sementara pada `input`, pengguna hanya diperbolehkan untuk memasukkan data angka. Jika dilanggar, maka interpreter Python akan menampilkan pesan salah.
 
@@ -120,6 +120,7 @@ Selain sudut pandang di atas, terdapat beberapa sudut pandang lain yang akan men
     Dengan semakin berkembangnya teknologi layar tampilan, maka penggunaan layar sentuh (touch screen) menjadi semakin popular. Penggunaan layar sentuh, beserta teknologi di belakangnya, telah menjadi bahan kajian yang menarik. Saat ini, selain layar sentuh, layar sentuh banyak (multi-touch screen) juga semakin banyak digunakan.
 
 Lebih lanjut, dari sudut pandang ilmu komputer, disiplin ilmu yang disebutkan di atas dapat menjadi semacam pendukung IMK, seperti halnya fisika menjadi pendukung disiplin teknik sipil, atau teknik mesin yang menjadi pendukung robotika. Pelajaran yang dapat dipetik dari disiplin keteknikan adalah bahwa perancangan selalu mempunyai konteks, dan optimisasi yang terlalu sempit dari satu bagian dalam perancangan tersebut akan dianggap tidak sah pada konteks yang lebih luas. Dengan demikian, dari sudut pandang ilmu komputer secara langsung, adalah perlu untuk membahas IMK secara luas untuk memberikan bekal kepada mahasiswa (dan praktisi) untuk menghindari kelemahan klasik yang memisahkan antara rancangan dengan konteks.
+
 Selain itu, perlu juga diketahui bahwa IMK berurusan dengan kinerja gabungan antara manusia dan mesin; struktur komunikasi antara manusia dan mesin, kemampuan manusia menggunakan mesin (termasuk kemampuan untuk dipelajari/learnability dari antarmuka yang digunakan); algoritma dan pemrograman antarmuka; isu-isu rekayasa yang muncul pada saat merancang dan membangun antarmuka; proses spesifikasi, perancangan dan implementasi antarmuka; serta biaya perancangan.
 
 ## Rangkuman
