Change python snippet to txt

--- a/modul-01/kb-01.md
+++ b/modul-01/kb-01.md
@@ -29,7 +29,7 @@ Interaksi manusia dan komputer juga dapat digambarkan melalui contoh program sed
 
 Program pada Gambar 1.4.a mempunyai dua buah statemen `raw_input`, sebuah statemen `input`, dan lima buah statemen `print` yang salah satunya tidak diikuti apapun (baris 13). Variasi statemen `print` ini fungsinya sama, yakni untuk mencetak suatu keluaran hasil eksekusi program. Tetapi, dapatkah Anda membedakan kedua variasi ini? Statemen `print` yang pertama (baris 13) digunakan untuk mencetak sebuah baris kosong di antara kelompok pengisian data dan pencetakan hasil (lihat Gambar 1.4.b). Statemen  `print` yang lain digunakan untuk mencetak kata `Hallo` dan kata-kata yang lain (baris 14 dan seterusnya).
 
-```python
+```txt
 [ 1] #------------------------------------------------- 
 [ 2] # Contoh penggunaan statemen masukan dan keluaran 
 [ 3] #------------------------------------------------- 
