Added modul 1 kb 2

--- a/modul-01/kb-01.md
+++ b/modul-01/kb-01.md
@@ -126,3 +126,7 @@ Selain itu, perlu juga diketahui bahwa IMK berurusan dengan kinerja gabungan ant
 ## Rangkuman
 
 Antarmuka (interface) mempunyai pengaruh yang sangat besar bagi pengguna. Antarmuka yang ramah (user-friendly) sangat membantu pengguna dalam berinteraksi dengan komputer, sehingga berpengaruh terhadap efektivitas kerjanya. Interkasi Manusia dan Komputer merupakan sebuah disiplin ilmu yang mempelajari tentang perancangan, implementasi, dan evaluasi sistem komputasi interaktif, dan berbagai aspek terkait, yang didukung oleh berbagai disiplin ilmu lain, antara lain Ilmu Komputer, Psikologi, Antropologi, Sosiologi, Teknik Elektronika, Linguistik, Perancangan Industri.
+
+***
+
+Selanjutnya [Kegiatan Belajar 2: Pengembangan Antarmuka](kb-02.md)
